tox + Split Point Identification Added tox for automated testing, Split point identification working.
Model separated, better suited for testing. Added tox

Stash

Improvements

Major changes, split point identification working

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Jerin Philip <monu1618@gmail.com>
-Vasudev Kamath <http://scr.im/copyninja>
+Vasudev Kamath <copyninja@users.noreply.github.com>
+Vasudev Kamath <vasudev@copyninja.info>
