Restructure and console scripts Hierarchy restructure. Console scripts added to train and test Waiting optimizations
More experiments

Restructure, Improvements
Organized into a neater hierarchy. Cmd arguments for test and train
supported.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,9 @@
 CHANGES
 =======
 
+* More experiments
+* Waiting optimizations
+* Major changes, split point identification working
 * Improvements
 * Stash
 * Model separated, better suited for testing. Added tox
