Old tests removed. PEP-8 passing for now, debug messages removed

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Restructure, Improvements Organized into a neater hierarchy. Cmd arguments for test and train supported
 * More experiments
 * Waiting optimizations
 * Major changes, split point identification working
