Documentation and Model Testing Added script to benchmark the model versus a given dataset. Documentation added. Added docs, Improved tests
Update Testing.md

Test improved

Update Testing.md

Changed the example to suit the new test format.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Jerin Philip <jerin.philip@students.iiit.ac.in>
 Jerin Philip <monu1618@gmail.com>
 Vasudev Kamath <copyninja@users.noreply.github.com>
 Vasudev Kamath <vasudev@copyninja.info>
