Modified console scripts for py2.7 compatibility Adjusted Training.md. Removed split and unsplit, no to one results file.

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@ CHANGES
 =======
 
 * Update Testing.md
+* Test improved
+* Update Testing.md
 * Added docs, Improved tests
 * Tests now using files
 * Fixed Makefile trailing whitespace, moved models into module
